# cmake-project

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
benchmarks/: CMakeLists.txt
examples/: CMakeLists.txt
include/: CMakeLists.txt  header.hpp
src/: CMakeLists.txt  hello.cpp
tests/: CMakeLists.txt
